third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/leading-us-bin.stderr
TOML parse error at line 1, column 18
  |
1 | leading-us-bin = _0b1
  |                  ^
invalid integer
expected leading digit
